fix backend date offset handling